base/src/test/resources/failure/syntax/issue164.aya.txt
In file $FILE:3:26 ->

  1 | def uncurry (A : Type) (B : Type) (C : Type)
  2 |              (f : Pi A B -> C)
  3 |              (p : Sig A  B) : C
                                ^^

Error: Parser error: extraneous input ')' expecting {'Type', 'I', LAND, LOR, '**', '{', '(', '{?', NUMBER, '_', STRING, REPL_COMMAND, ID}

Parsing interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
